--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
   "author": "elvis",
   "license": "MIT",
   "dependencies": {
+    "file-loader": "^0.9.0",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "bootstrap": "^3.3.6",
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.2.1",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
