--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server"
   },
   "author": "elvis",
   "license": "MIT",
   "dependencies": {
-    "file-loader": "^0.9.0",
+    "express": "^4.14.0",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "url-loader": "^0.5.7"
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -21,11 +20,16 @@
     "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.9.0",
     "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
+  },
+  "engines": {
+    "node": "5.5.0"
   }
 }
